fix(css): unwanted margin on mobile

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -21,6 +21,6 @@ html {
 body {
   background-color: #000;
   
-  padding: 1rem;
+  padding: 2rem;
   height: 100vh;
 }
